# win11-taskbar-tuner

./: .gitignore  CMakeLists.txt
.github/workflows/: build.yml
include/: app.h  config.h  logger.h
resources/: app.manifest  app.rc  dpi.manifest  resource.h
src/: config.cpp  logger.cpp  main.cpp  taskbar_util.cpp
